fine-tuned concorance conditional

--- a/french/pages/exercise_concordance_conditional.html
+++ b/french/pages/exercise_concordance_conditional.html
@@ -46,14 +46,14 @@
 
                     <ol class="input-sentence-width">
                         <li>
-                            <span title="Mais, demain soir, s’ils ne travaillent pas, ils iront au cinéma.">Ce soir, ils
+                            <span title="Mais, demain soir, s'ils ne travaillent pas, ils iront au cinéma.">Ce soir, ils
                                 ne
                                 vont pas au cinéma parce qu’ils travaillent.</span>
                             <input type="text"
                                 pattern="Mais, demain soir, s'ils ne travaillent pas, ils iront au cinéma[.]?">
                         </li>
                         <li>
-                            <span title="Mais, l’hiver prochain, si elle n’a pas de rhume, elle fera du ski."> Cet
+                            <span title="Mais, l'hiver prochain, si elle n'a pas de rhume, elle fera du ski."> Cet
                                 hiver,
                                 elle ne fait pas de ski parce qu’elle a un rhume.</span>
                             <input type="text"
@@ -75,7 +75,7 @@
                                 pattern="Mais, demain soir, si nous ne devons pas nous lever tôt, nous ferons la fête[.]?">
                         </li>
                         <li>
-                            <span title="Mais, demain, s’il n’y a pas de tempête de neige, je sortirai."> Aujourd’hui,
+                            <span title="Mais, demain, s'il n'y a pas de tempête de neige, je sortirai."> Aujourd’hui,
                                 je ne
                                 sors pas parce qu’il y a une tempête de neige.</span>
                             <input type="text"
@@ -170,30 +170,30 @@
                             <input type="text" pattern="Si elles avaient le temps, elles iraient au théâtre[.]?">
                         </li>
                         <li>
-                            <span title="Si la chaussée n’était pas glacée, nous ferions une promenade.">Nous ne faisons
+                            <span title="Si la chaussée n'était pas glacée, nous ferions une promenade.">Nous ne faisons
                                 pas
                                 de promenade parce que la chaussée est glacée.</span>
                             <input type="text"
                                 pattern="Si la chaussée n'était pas glacée, nous ferions une promenade[.]?">
                         </li>
                         <li>
-                            <span title="Si les voisins ne faisaient pas de bruit, je pourrais dormir.">Je ne peux pas
+                            <span title="Si les voisins ne faisaient pas trop de bruit, je pourrais dormir.">Je ne peux
+                                pas
                                 dormir
                                 parce que les voisins font trop de bruit.</span>
                             <input type="text"
-                                pattern="Si les voisins ne faisaient pas de bruit, je pourrais dormir[.]?">
+                                pattern="Si les voisins ne faisaient pas trop de bruit, je pourrais dormir[.]?">
                         </li>
                         <li>
-                            <span title="S’il avait un travail, il aurait de l’argent.">Il n’a pas d’argent parce qu’il
+                            <span title="S'il avait un travail, il aurait de l'argent.">Il n’a pas d’argent parce qu’il
                                 n’a
                                 pas de travail.</span>
                             <input type="text" pattern="S'il avait un travail, il aurait de l'argent[.]?">
                         </li>
                         <li>
-                            <span title="Si vous aviez l'auto, vous sortiriez souvent.">Vous ne sortez pas
-                                souvent
-                                parce que vous n’avez pas d’auto.</span>
-                            <input type="text" pattern="Si vous aviez l'auto, vous sortiriez souvent[.]?">
+                            <span title="Si vous aviez une auto, vous sortiriez souvent.">Vous ne sortez pas
+                                souvent parce que vous n’avez pas d’auto.</span>
+                            <input type="text" pattern="Si vous aviez une auto, vous sortiriez souvent[.]?">
                         </li>
                     </ol>
                 </section>
@@ -277,14 +277,14 @@
                     <ol class="input-sentence-width">
                         <li>
                             <span
-                                title="Si nous n’avions pas mangé trop de chocolat, nous n’aurions pas eu mal à l’estomac.">Nous
+                                title="Si nous n'avions pas mangé trop de chocolat, nous n'aurions pas eu mal à l'estomac.">Nous
                                 avons eu mal à l’estomac
                                 parce que nous avons mangé trop de chocolat.</span>
                             <input type="text"
                                 pattern="Si nous n'avions pas mangé trop de chocolat, nous n'aurions pas eu mal à l'estomac[.]?">
                         </li>
                         <li>
-                            <span title="S’il n’avait pas plu, elle serait allée en randonnée."> Elle n’est pas
+                            <span title="S'il n'avait pas plu, elle serait allée en randonnée."> Elle n’est pas
                                 allée en randonnée parce qu’il a plu.</span>
                             <input type="text" pattern="S'il n'avait pas plu, elle serait allée en randonnée[.]?">
                         </li>
@@ -296,16 +296,16 @@
                         </li>
                         <li>
                             <span
-                                title="Si la nourriture n’avait pas été très épicée, tu n’aurais pas détesté ce restaurant.">Tu
+                                title="Si la nourriture n'avait pas été très épicée, tu n'aurais pas détesté ce restaurant.">Tu
                                 as détesté ce restaurant parce
                                 que la nourriture était très épicée.</span>
                             <input type="text"
                                 pattern="Si la nourriture n'avait pas été très épicée, tu n'aurais pas détesté ce restaurant[.]?">
                         </li>
                         <li>
-                            <span title="S’il n’avait pas été méchant avec nous, nous l’aurions invité."> Nous ne
-                                l’avons pas invité
-                                parce qu’il a été méchant avec nous.</span>
+                            <span title="S'il n'avait pas été méchant avec nous, nous l'aurions invité.">
+                                Nous ne l’avons pas invité parce qu’il a été méchant avec nous.
+                            </span>
                             <input type="text"
                                 pattern="S'il n'avait pas été méchant avec nous, nous l'aurions invité[.]?">
                         </li>
@@ -313,7 +313,7 @@
                 </section>
 
                 <section>
-                    <h4>Complétez les phrases suivantes pour former une hypothèse sur le présent.</h4>
+                    <h4>Complétez les phrases suivantes pour former une hypothèse sur le passé.</h4>
 
                     <ol>
                         <li>
