fine-tuning concordance conditional

--- a/french/pages/exercise_concordance_conditional.html
+++ b/french/pages/exercise_concordance_conditional.html
@@ -28,7 +28,7 @@
 
             <ol>
                 <section>
-                    <h4>Complétez les phrases suivantes pour former une hypothèse sur le futur.</h4>
+                    <h4>Complétez les phrases suivantes pour former une <i>hypothèse sur le futur</i>.</h4>
                     <div>
                         Lorsque nous sommes incertains, nous faisons une hypothèse sur le futur :<br />
                         Si + présent, futur simple<br /><br />
@@ -60,12 +60,11 @@
                                 pattern="Mais, l'hiver prochain, si elle n'a pas de rhume, elle fera du ski[.]?">
                         </li>
                         <li>
-                            <span
-                                title="Mais, demain, si je ne suis pas à la diète, je mangerai du dessert.">Aujourd’hui,
-                                je
-                                mange du dessert parce que je ne suis pas à la diète.</span>
+                            <span title="Demain, si je suis à la diète, je ne mangerai pas de dessert.">
+                                Aujourd’hui, je mange du dessert parce que je ne suis pas à la diète.
+                            </span>
                             <input type="text"
-                                pattern="Mais, demain, si je ne suis pas à la diète, je mangerai du dessert[.]?">
+                                pattern="Demain, si je suis à la diète, je ne mangerai pas de dessert[.]?">
                         </li>
                         <li>
                             <span
@@ -85,7 +84,7 @@
                 </section>
 
                 <section>
-                    <h4>Complétez les phrases suivantes pour former une hypothèse sur le futur.</h4>
+                    <h4>Complétez les phrases suivantes pour former une <i>hypothèse sur le futur</i>.</h4>
 
                     <ol>
                         <li>
@@ -143,7 +142,7 @@
                 </section>
 
                 <section>
-                    <h4>Complétez les phrases suivantes pour former une hypothèse sur le présent. </h4>
+                    <h4>Complétez les phrases suivantes pour former une <i>hypothèse sur le présent</i>. </h4>
                     <div>
                         Lorsque nous imaginons quelque chose qui n’existe pas, nous faisons une hypothèse sur le présent
                         :
@@ -199,7 +198,7 @@
                 </section>
 
                 <section>
-                    <h4>Complétez les phrases suivantes pour former une hypothèse sur le présent.</h4>
+                    <h4>Complétez les phrases suivantes pour former une <i>hypothèse sur le présent</i>.</h4>
 
                     <ol>
                         <li>
@@ -256,7 +255,7 @@
                 </section>
 
                 <section>
-                    <h4>Complétez les phrases suivantes pour former une hypothèse sur le passé.</h4>
+                    <h4>Complétez les phrases suivantes pour former une <i>hypothèse sur le passé</i>.</h4>
                     <div>
                         Lorsque nous imaginons quelque chose qui n’a pas eu lieu, nous faisons une hypothèse sur le
                         passé :
@@ -313,7 +312,7 @@
                 </section>
 
                 <section>
-                    <h4>Complétez les phrases suivantes pour former une hypothèse sur le passé.</h4>
+                    <h4>Complétez les phrases suivantes pour former une <i>hypothèse sur le passé</i>.</h4>
 
                     <ol>
                         <li>
