fine-tuning concordance conditional

--- a/french/pages/exercise_concordance_conditional.html
+++ b/french/pages/exercise_concordance_conditional.html
@@ -60,11 +60,11 @@
                                 pattern="Mais, l'hiver prochain, si elle n'a pas de rhume, elle fera du ski[.]?">
                         </li>
                         <li>
-                            <span title="Demain, si je suis à la diète, je ne mangerai pas de dessert.">
+                            <span title="Mais, demain, si je suis à la diète, je ne mangerai pas de dessert.">
                                 Aujourd’hui, je mange du dessert parce que je ne suis pas à la diète.
                             </span>
                             <input type="text"
-                                pattern="Demain, si je suis à la diète, je ne mangerai pas de dessert[.]?">
+                                pattern="Mais, demain, si je suis à la diète, je ne mangerai pas de dessert[.]?">
                         </li>
                         <li>
                             <span
