--- a/french/pages/exercise_pastperfect.html
+++ b/french/pages/exercise_pastperfect.html
@@ -254,7 +254,7 @@
                     <li>
                         Ce comédien a joué dans plusieurs pièces que mon frère
                         (<b title="avait écrites">écrire</b>)
-                        <input type="text" pattern="avait écrites">
+                        <input type="text" class="wide" pattern="avait écrites">
                         .
                     </li>
 
