--- a/french/index.html
+++ b/french/index.html
@@ -22,6 +22,7 @@
   <h2>La conjugaison des temps de verbes</h2>
 
   <div class="card">
+    <span class="cefr">A1</span>
     <header>Le présent</header>
     <a href="pdf/present.pdf">théorie</a>
     <a href="pages/conjugations.html?Le%20pr%C3%A9sent">exercice de liste de verbes</a>
@@ -29,6 +30,7 @@
   </div>
 
   <div class="card">
+    <span class="cefr">A1</span>
     <header>Le passé composé</header>
     <a href="pdf/presentperfect.pdf">théorie</a>
     <a href="pages/conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">exercice de liste de verbes</a>
@@ -36,6 +38,7 @@
   </div>
 
   <div class="card">
+    <span class="cefr">A2</span>
     <header>L'imparfait</header>
     <a href="pdf/imperfect.pdf">théorie</a>
     <a href="pages/conjugations.html?L'imparfait">exercice de liste de verbes</a>
@@ -43,6 +46,7 @@
   </div>
 
   <div class="card">
+    <span class="cefr">A2</span>
     <header>Le futur simple</header>
     <a href="pdf/future.pdf">théorie</a>
     <a href="pages/conjugations.html?Le%20futur%20simple">exercice de liste de verbes</a>
@@ -50,6 +54,7 @@
   </div>
 
   <div class="card">
+    <span class="cefr">A2</span>
     <header>L'impératif</header>
     <a href="pdf/imperative.pdf">théorie</a>
     <a href="pages/conjugations.html?L%27impératif">exercice de liste de verbes</a>
@@ -57,6 +62,7 @@
   </div>
 
   <div class="card">
+    <span class="cefr">B1</span>
     <header>Le plus-que-parfait</header>
     <a href="pdf/plus-que-parfait.pdf">théorie</a>
     <a href="pages/conjugations.html?Le%20plus-que-parfait">exercice de liste de verbes</a>
@@ -64,6 +70,7 @@
   </div>
 
   <div class="card">
+    <span class="cefr">B1</span>
     <header>Le conditionnel présent</header>
     <a href="pdf/conditionalpresent.pdf">théorie</a>
     <a href="pages/conjugations.html?Le%20conditionnel%20pr%C3%A9sent">exercice de liste de verbes</a>
@@ -71,6 +78,7 @@
   </div>
 
   <div class="card">
+    <span class="cefr">B2</span>
     <header>Le conditionnel passé</header>
     <a href="pdf/conditionalperfect.pdf">théorie</a>
     <a href="pages/conjugations.html?Le%20conditionnel%20passé">exercice de liste de verbes</a>
@@ -102,6 +110,7 @@
   </div>
 
   <div class="card">
+    <span class="cefr">B1</span>
     <header>La forme passive</header>
     <a href="pdf/passive.pdf">théorie</a>
     <a href="pages/exercise_passive.html">exercice de texte</a>
