added CEFR level to cards on index page

--- a/french/index.html
+++ b/french/index.html
@@ -92,18 +92,21 @@
   <hr />
 
   <div class="card">
+    <span class="cefr">A2</span>
     <header>La concordance du passé composé et de l'imparfait</header>
     <a href="pdf/concordance2.pdf">théorie</a>
     <a href="pages/exercise_concordance.html">exercice de texte</a>
   </div>
 
   <div class="card">
+    <span class="cefr">B1</span>
     <header>La concordance du passé composé, de l'imparfait et du plus-que-parfait</header>
     <a href="pdf/concordance3.pdf">théorie</a>
     <a href="pages/exercise_concordance3.html">exercice de texte</a>
   </div>
 
   <div class="card">
+    <span class="cefr">B2</span>
     <header>Les phrases de condition</header>
     <a href="pdf/concordance_conditional.pdf">théorie</a>
     <a href="pages/exercise_concordance_conditional.html">exercice de texte</a>
