added verb list for subjunctive tense

--- a/french/index.html
+++ b/french/index.html
@@ -78,6 +78,14 @@
   </div>
 
   <div class="card">
+    <span class="cefr">B1</span>
+    <header>Le subjonctif présent</header>
+    <a href="pdf/presentsubjunctive.pdf">théorie</a>
+    <a href="pages/conjugations.html?Le%20subjonctif%20présent">exercice de liste de verbes</a>
+    <a href="pages/exercise_conditionalpresent.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
     <span class="cefr">B2</span>
     <header>Le conditionnel passé</header>
     <a href="pdf/conditionalperfect.pdf">théorie</a>
