--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -89,7 +89,7 @@
                         <th><a href="exercise_conditionalpresent.html">texte</a></th>
 
                         <!-- subjonctif présent -->
-                        <th>liste</th>
+                        <th><a href="conjugations.html?Le%20subjonctif%20présent">liste</a></th>
                         <th>texte</th>
 
                         <!-- passif -->
@@ -141,7 +141,7 @@
                             <td class="conjugations.html?Le%20conditionnel%20pr%C3%A9sent"></td>
                             <td class="exercise_conditionalpresent.html"></td>
 
-                            <td class=""></td>
+                            <td class="conjugations.html?Le%20subjonctif%20présent"></td>
                             <td class=""></td>
 
                             <td class="exercise_passive.html"></td>
