added subjunctive to mixed conjugation page

--- a/french/pages/conjugations_mixed.html
+++ b/french/pages/conjugations_mixed.html
@@ -60,6 +60,10 @@
                     conditionnel présent
                 </label>
                 <label>
+                    <input type="checkbox" class="verb-tense-checkbox" name="presentsubjunctive" checked="checked">Le
+                    subjonctif présent
+                </label>
+                <label>
                     <input type="checkbox" class="verb-tense-checkbox" name="conditionalperfect" checked="checked">Le
                     conditionnel passé
                 </label>
