saving states of checkboxes in local memory for mixed conjugation page

--- a/french/pages/conjugations_mixed.html
+++ b/french/pages/conjugations_mixed.html
@@ -14,12 +14,19 @@
 
         import { PageBuilderForManyTenses } from '../js/PageBuilderForManyTenses.mjs';
         import { ErrorCounter } from '../js/ErrorCounter.mjs';
+        import { Config } from '../js/Config.mjs';
 
         const verbListObject = PageBuilderForManyTenses.getVerbList();
         const title = window.decodeURIComponent(window.location.search).substring(1);
 
+        let page = window.location.pathname.split('/').pop() + window.location.search;
+
         document.querySelectorAll('.verb-tense-checkbox').forEach((checkboxElement) => {
+            checkboxElement.checked = Config.retrieve(page, checkboxElement.name) ?? true;
+
             checkboxElement.onclick = () => {
+                Config.save(page, checkboxElement.name, checkboxElement.checked);
+
                 PageBuilderForManyTenses.buildForManyTenses(verbListObject, title);
                 ErrorCounter.initialize(PageBuilderForManyTenses.getVerbTenseList());
             }
