--- a/french/pages/exercise_imperative.html
+++ b/french/pages/exercise_imperative.html
@@ -84,8 +84,8 @@
                     </li>
 
                     <li>
-                        <span title="Non, n’étudions pas !">Nous voulons étudier ?</span>
-                        <span><input type="text" pattern="Non, n’étudions pas[ ]?[!]?"></span>
+                        <span title="Non, n'étudions pas !">Nous voulons étudier ?</span>
+                        <span><input type="text" pattern="Non, n'étudions pas[ ]?[!]?"></span>
                     </li>
 
                     <li>
@@ -180,8 +180,8 @@
                     </li>
 
                     <li>
-                        <span title="Non, ne m’achetez pas ce cadeau !">Achetez-moi ce cadeau !</span>
-                        <span><input type="text" pattern="Non, ne m’achetez pas ce cadeau[ ]?[!]?"></span>
+                        <span title="Non, ne m'achetez pas ce cadeau !">Achetez-moi ce cadeau !</span>
+                        <span><input type="text" pattern="Non, ne m'achetez pas ce cadeau[ ]?[!]?"></span>
                     </li>
                 </ol>
             </section>
@@ -225,9 +225,9 @@
                     </li>
 
                     <li>
-                        <span title="Oui, prenons-en ! Non, n’en prenons pas !">Nous prenons des pâtes ?</span>
+                        <span title="Oui, prenons-en ! Non, n'en prenons pas !">Nous prenons des pâtes ?</span>
                         <span><input type="text" pattern="Oui, prenons-en[ ]?[!]?"></span>
-                        <span><input type="text" pattern="Non, n’en prenons pas[ ]?[!]?"></span>
+                        <span><input type="text" pattern="Non, n'en prenons pas[ ]?[!]?"></span>
                     </li>
                 </ol>
             </section>
@@ -247,33 +247,33 @@
 
                 <ol>
                     <li>
-                        <span title="Allez-y !  Non, n’y allez pas !">Allez à la bibliothèque !</span>
+                        <span title="Allez-y !  Non, n'y allez pas !">Allez à la bibliothèque !</span>
                         <span><input type="text" pattern="Allez-y[ ]?[!]?"></span>
-                        <span><input type="text" pattern="Non, n’y allez pas[ ]?[!]?"></span>
+                        <span><input type="text" pattern="Non, n'y allez pas[ ]?[!]?"></span>
                     </li>
 
                     <li>
-                        <span title="Allons-y !  Non, n’y allons pas !">Allons au cinéma !</span>
+                        <span title="Allons-y !  Non, n'y allons pas !">Allons au cinéma !</span>
                         <span><input type="text" pattern="Allons-y[ ]?[!]?"></span>
-                        <span><input type="text" pattern="Non, n’y allons pas[ ]?[!]?"></span>
+                        <span><input type="text" pattern="Non, n'y allons pas[ ]?[!]?"></span>
                     </li>
 
                     <li>
-                        <span title="Vas-y !  Non, n’y va pas !">Va chez le directeur !</span>
+                        <span title="Vas-y !  Non, n'y va pas !">Va chez le directeur !</span>
                         <span><input type="text" pattern="Vas-y[ ]?[!]?"></span>
-                        <span><input type="text" pattern="Non, n’y va pas[ ]?[!]?"></span>
+                        <span><input type="text" pattern="Non, n'y va pas[ ]?[!]?"></span>
                     </li>
 
                     <li>
-                        <span title="Allez-y !  Non, n’y allez pas !">Allez dans le jardin !</span>
+                        <span title="Allez-y !  Non, n'y allez pas !">Allez dans le jardin !</span>
                         <span><input type="text" pattern="Allez-y[ ]?[!]?"></span>
-                        <span><input type="text" pattern="Non, n’y allez pas[ ]?[!]?"></span>
+                        <span><input type="text" pattern="Non, n'y allez pas[ ]?[!]?"></span>
                     </li>
 
                     <li>
-                        <span title="Vas-y !  Non, n’y va pas !">Va au musée !</span>
+                        <span title="Vas-y !  Non, n'y va pas !">Va au musée !</span>
                         <span><input type="text" pattern="Vas-y[ ]?[!]?"></span>
-                        <span><input type="text" pattern="Non, n’y va pas[ ]?[!]?"></span>
+                        <span><input type="text" pattern="Non, n'y va pas[ ]?[!]?"></span>
                     </li>
                 </ol>
             </section>
