use mixed conjugation page for all conjugations

--- a/french/index.html
+++ b/french/index.html
@@ -94,7 +94,7 @@
   </div>
 
   <h3>
-    <a class="wide" href="pages/conjugations_mixed.html?Conjugaisons%20mélangées">Conjugaisons mélangées</a>
+    <a class="wide" href="pages/conjugations.html?Conjugaisons%20mélangées">Conjugaisons mélangées</a>
   </h3>
 
   <hr />
