--- a/french/pages/exercise_passive.html
+++ b/french/pages/exercise_passive.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!-- exercises are taken from https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F851010166_Le_conditionnel_pr_sent_exercices_et_corrig_.pdf -->
+<!-- exercises are taken from https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/O0003262446_la_forme_passive_exercices_et_corrig_.pdf -->
 
 <html lang="fr">
 
@@ -45,15 +45,15 @@
                     </li>
 
                     <li>
-                        <span title="Les plans de maison sont dessinés par l’architecte.">L’architecte dessine les
+                        <span title="Les plans de maison sont dessinés par l'architecte.">L’architecte dessine les
                             plans de maison.</span>
                         <span><input type="text"
-                                pattern="Les plans de maison sont dessinés par l’architecte[.]?"></span>
+                                pattern="Les plans de maison sont dessinés par l'architecte[.]?"></span>
                     </li>
 
                     <li>
-                        <span title="Le malade est soigné par l’infirmière.">L’infirmière soigne le malade.</span>
-                        <span><input type="text" pattern="Le malade est soigné par l’infirmière[.]?"></span>
+                        <span title="Le malade est soigné par l'infirmière.">L’infirmière soigne le malade.</span>
+                        <span><input type="text" pattern="Le malade est soigné par l'infirmière[.]?"></span>
                     </li>
 
                     <li>
@@ -63,14 +63,14 @@
                     </li>
 
                     <li>
-                        <span title="La terre est cultivée par l’agriculteur.">L’agriculteur cultive la
+                        <span title="La terre est cultivée par l'agriculteur.">L’agriculteur cultive la
                             terre.</span>
-                        <span><input type="text" pattern="La terre est cultivée par l’agriculteur[.]?"></span>
+                        <span><input type="text" pattern="La terre est cultivée par l'agriculteur[.]?"></span>
                     </li>
 
                     <li>
-                        <span title="Le miel est produit par l’abeille.">L’abeille produit le miel.</span>
-                        <span><input type="text" pattern="Le miel est produit par l’abeille[.]?"></span>
+                        <span title="Le miel est produit par l'abeille.">L’abeille produit le miel.</span>
+                        <span><input type="text" pattern="Le miel est produit par l'abeille[.]?"></span>
                     </li>
 
                     <li>
@@ -80,9 +80,9 @@
                     </li>
 
                     <li>
-                        <span title="Une maison est bâtie par l’entrepreneur.">L’entrepreneur bâtit une
+                        <span title="Une maison est bâtie par l'entrepreneur.">L’entrepreneur bâtit une
                             maison.</span>
-                        <span><input type="text" pattern="Une maison est bâtie par l’entrepreneur[.]?"></span>
+                        <span><input type="text" pattern="Une maison est bâtie par l'entrepreneur[.]?"></span>
                     </li>
 
                     <li>
@@ -91,9 +91,9 @@
                     </li>
 
                     <li>
-                        <span title="L’ordinateur est dépanné par le technicien.">Le technicien dépanne
+                        <span title="L'ordinateur est dépanné par le technicien.">Le technicien dépanne
                             l’ordinateur.</span>
-                        <span><input type="text" pattern="L’ordinateur est dépanné par le technicien[.]?"></span>
+                        <span><input type="text" pattern="L'ordinateur est dépanné par le technicien[.]?"></span>
                     </li>
                 </ol>
             </section>
@@ -145,12 +145,12 @@
                     </li>
 
                     <li>
-                        <span title="La direction chasse l’étudiant.">L’étudiant est chassé par la direction.</span>
-                        <span><input type="text" pattern="La direction chasse l’étudiant[.]?"></span>
+                        <span title="La direction chasse l'étudiant.">L’étudiant est chassé par la direction.</span>
+                        <span><input type="text" pattern="La direction chasse l'étudiant[.]?"></span>
                     </li>
 
                     <li>
-                        <span title="Des spécialistes enseignent le mandarin.">La mandarin est enseigné par des
+                        <span title="Des spécialistes enseignent le mandarin.">Le mandarin est enseigné par des
                             spécialistes.</span>
                         <span><input type="text" pattern="Des spécialistes enseignent le mandarin[.]?"></span>
                     </li>
@@ -162,9 +162,9 @@
                     </li>
 
                     <li>
-                        <span title="L’infirmière a vacciné les malades.">Les malades ont été vaccinés par
+                        <span title="L'infirmière a vacciné les malades.">Les malades ont été vaccinés par
                             l’infirmière.</span>
-                        <span><input type="text" pattern="L’infirmière a vacciné les malades[.]?"></span>
+                        <span><input type="text" pattern="L'infirmière a vacciné les malades[.]?"></span>
                     </li>
                 </ol>
             </section>
@@ -190,8 +190,8 @@
                     </li>
 
                     <li>
-                        <span title="Un sujet d’actualité sera discuté.">On discutera un sujet d’actualité.</span>
-                        <span><input type="text" pattern="Un sujet d’actualité sera discuté[.]?"></span>
+                        <span title="Un sujet d'actualité sera discuté.">On discutera un sujet d’actualité.</span>
+                        <span><input type="text" pattern="Un sujet d'actualité sera discuté[.]?"></span>
                     </li>
 
                     <li>
@@ -226,9 +226,9 @@
                     </li>
 
                     <li>
-                        <span title="L’ordinateur est de plus en plus utilisé.">On utilise de plus en plus
+                        <span title="L'ordinateur est de plus en plus utilisé.">On utilise de plus en plus
                             l’ordinateur.</span>
-                        <span><input type="text" pattern="L’ordinateur est de plus en plus utilisé[.]?"></span>
+                        <span><input type="text" pattern="L'ordinateur est de plus en plus utilisé[.]?"></span>
                     </li>
 
                     <li>
@@ -354,9 +354,9 @@
 
                     <li>
                         <div>
-                            <span title="Une reine est élue lors du carnaval d’hiver.">Lors du carnaval d’hiver, on élit
+                            <span title="Une reine est élue lors du carnaval d'hiver.">Lors du carnaval d’hiver, on élit
                                 une reine.</span>
-                            <span><input type="text" pattern="Une reine est élue lors du carnaval d’hiver[.]?"></span>
+                            <span><input type="text" pattern="Une reine est élue lors du carnaval d'hiver[.]?"></span>
                         </div>
                     </li>
 
