fine-tuned css for exercise passive

--- a/french/pages/exercise_passive.html
+++ b/french/pages/exercise_passive.html
@@ -313,81 +313,60 @@
 
                 <ol>
                     <li>
-                        <div>
-                            <span title="Elle a été facilement séduite par ce jeune homme.">Ce jeune homme l’a séduite
-                                facilement.</span>
-                            <span><input type="text"
-                                    pattern="Elle a été facilement séduite par ce jeune homme[.]?"></span>
-                        </div>
+                        <span title="Elle a été facilement séduite par ce jeune homme.">Ce jeune homme l’a séduite
+                            facilement.</span>
+                        <span><input type="text" pattern="Elle a été facilement séduite par ce jeune homme[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="La banque aurait été fermée pour rénovations.">On aurait fermé la banque pour
-                                rénovations.</span>
-                            <span><input type="text" pattern="La banque aurait été fermée pour rénovations[.]?"></span>
-                        </div>
+                        <span title="La banque aurait été fermée pour rénovations.">On aurait fermé la banque pour
+                            rénovations.</span>
+                        <span><input type="text" pattern="La banque aurait été fermée pour rénovations[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="Ces fleurs sont cueillies par le jardinier.">Le jardinier cueille ces
-                                fleurs.</span>
-                            <span><input type="text" pattern="Ces fleurs sont cueillies par le jardinier[.]?"></span>
-                        </div>
+                        <span title="Ces fleurs sont cueillies par le jardinier.">Le jardinier cueille ces
+                            fleurs.</span>
+                        <span><input type="text" pattern="Ces fleurs sont cueillies par le jardinier[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="Ce vêtement doit être lavé à la main.">On doit laver ce vêtement à la
-                                main.</span>
-                            <span><input type="text" pattern="Ce vêtement doit être lavé à la main[.]?"></span>
-                        </div>
+                        <span title="Ce vêtement doit être lavé à la main.">On doit laver ce vêtement à la
+                            main.</span>
+                        <span><input type="text" pattern="Ce vêtement doit être lavé à la main[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="Cette société est dirigée par un roi.">Un roi dirige cette société.</span>
-                            <span><input type="text" pattern="Cette société est dirigée par un roi[.]?"></span>
-                        </div>
+                        <span title="Cette société est dirigée par un roi.">Un roi dirige cette société.</span>
+                        <span><input type="text" pattern="Cette société est dirigée par un roi[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="Une reine est élue lors du carnaval d'hiver.">Lors du carnaval d’hiver, on élit
-                                une reine.</span>
-                            <span><input type="text" pattern="Une reine est élue lors du carnaval d'hiver[.]?"></span>
-                        </div>
+                        <span title="Une reine est élue lors du carnaval d'hiver.">Lors du carnaval d’hiver, on élit
+                            une reine.</span>
+                        <span><input type="text" pattern="Une reine est élue lors du carnaval d'hiver[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="Votre projet pourra être présenté.">Vous pourrez présenter votre projet.</span>
-                            <span><input type="text" pattern="Votre projet pourra être présenté[.]?"></span>
-                        </div>
+                        <span title="Votre projet pourra être présenté.">Vous pourrez présenter votre projet.</span>
+                        <span><input type="text" pattern="Votre projet pourra être présenté[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="Des étudiants chinois sont souvent reçus.">On reçoit souvent des étudiants
-                                chinois.</span>
-                            <span><input type="text" pattern="Des étudiants chinois sont souvent reçus[.]?"></span>
-                        </div>
+                        <span title="Des étudiants chinois sont souvent reçus.">On reçoit souvent des étudiants
+                            chinois.</span>
+                        <span><input type="text" pattern="Des étudiants chinois sont souvent reçus[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="Le silence doit être gardé.">Ils doivent garder le silence.</span>
-                            <span><input type="text" pattern="Le silence doit être gardé[.]?"></span>
-                        </div>
+                        <span title="Le silence doit être gardé.">Ils doivent garder le silence.</span>
+                        <span><input type="text" pattern="Le silence doit être gardé[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="Les primes au rendement seront supprimées.">On supprimera les primes au
-                                rendement.</span>
-                            <span><input type="text" pattern="Les primes au rendement seront supprimées[.]?"></span>
-                        </div>
+                        <span title="Les primes au rendement seront supprimées.">On supprimera les primes au
+                            rendement.</span>
+                        <span><input type="text" pattern="Les primes au rendement seront supprimées[.]?"></span>
                     </li>
                 </ol>
             </section>
