fixed typo in exercise passive

--- a/french/pages/exercise_passive.html
+++ b/french/pages/exercise_passive.html
@@ -195,7 +195,7 @@
                     </li>
 
                     <li>
-                        <span title="La pâte a été pétrie.">On a pétrit la pâte.</span>
+                        <span title="La pâte a été pétrie.">On a pétri la pâte.</span>
                         <span><input type="text" pattern="La pâte a été pétrie[.]?"></span>
                     </li>
 
