added exercise for present subjunctive (incomplete)

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -90,7 +90,7 @@
 
                         <!-- subjonctif présent -->
                         <th><a href="conjugations.html?Le%20subjonctif%20présent">liste</a></th>
-                        <th>texte</th>
+                        <th><a href="exercise_presentsubjunctive.html">texte</a></th>
 
                         <!-- passif -->
                         <th><a href="exercise_passive.html">texte</a></th>
@@ -142,7 +142,7 @@
                             <td class="exercise_conditionalpresent.html"></td>
 
                             <td class="conjugations.html?Le%20subjonctif%20présent"></td>
-                            <td class=""></td>
+                            <td class="exercise_presentsubjunctive.html"></td>
 
                             <td class="exercise_passive.html"></td>
 
